--- a/web/src/main/webapp/usuario/usuario.xhtml
+++ b/web/src/main/webapp/usuario/usuario.xhtml
@@ -85,7 +85,7 @@
                                 </p:column>
 
                                 <p:column headerText="Calificación">
-                                    <p:rating value="#{lugar.id}" readonly="true"/>
+                                    <p:rating value="#{lugar.calificacionPromedio()}" readonly="true"/>
                                 </p:column>
 
                                 <p:rowExpansion>
