--- a/web/src/main/webapp/WEB-INF/plantilla.xhtml
+++ b/web/src/main/webapp/WEB-INF/plantilla.xhtml
@@ -12,9 +12,6 @@
 <h:head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta http-equiv="Cache-Control" content ="no-cache"/>
-    <meta http-equiv="expires" content="0"/>
-    <meta http-equiv="Pragma" content="no-cache"/>
     <h:outputStylesheet library="css" name="bootstrap.min.css"/>
     <h:outputStylesheet library="css" name="style.css"/>
     <h:outputScript library="js" name="bootstrap.bundle.min.js"/>
@@ -88,7 +85,7 @@
                     </h:panelGrid>
                     <p:commandButton value="Iniciar Sesión" action="#{seguridadBean.iniciarSesion}"
                                      icon="pi pi-sign-in" iconPos="left" styleClass="mt-4" update="@form"/>
-                    <p:commandButton value="Recuperar contraseña" action="#{seguridadBean.iniciarSesion}" style="margin-left: 30px"
+                    <p:commandButton value="Recuperar contraseña" action="#{seguridadBean.recuperar}" style="margin-left: 30px"
                                      icon="pi pi-key" iconPos="left" styleClass="mt-4" update="@form"/>
                     <p:growl for="mensaje-sesion" showDetail="true"/>
                 </h:form>
